examples/virtualserver.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: nginx-virtualservice
spec:
    hosts:
      - nginx-service
    http:
      - route:
        - destination:
            host: nginx-service
            subset: green
          weight: 99
        - destination:
            host: nginx-service
            subset: blue
          weight: 1
